--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "build": "webpack"
   },
   "standard": {
+    "parser": "babel-eslint",
     "ignore": [
       "dist/",
       "flow-typed/"
-    ]
+    ],
+    "plugins": [
+      "flowtype"
+    ],
+    "globals": []
   },
   "dependencies": {
     "flow-bin": "^0.135.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "standard": "^14.3.4",
     "styled-components": "^5.2.0"
@@ -27,9 +33,12 @@
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "css-loader": "^4.3.0",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "html-webpack-plugin": "^4.5.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.3",
     "style-loader": "^2.0.0",
