Add LabelInput component Add PartQueryPage Add Parts store Add Footer component Add flow types to standard ignore Add utils folder Modify Button to use react router Link component Modify Button to allow disabled Modify Wrapper flex direction Expand redux store definitions along with Parts store Modify router to use switch

--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "plugins": [
       "flowtype"
     ],
-    "globals": []
+    "globals": [
+      "SyntheticEvent",
+      "HTMLInputElement",
+      "_"
+    ]
   },
   "dependencies": {
     "flow-bin": "^0.135.0",
